Fixed Z-index

--- a/Geothermal/style.css
+++ b/Geothermal/style.css
@@ -75,7 +75,7 @@ img {
   border: 1px solid #ccc;
   padding: 10px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-  z-index: 9999;
+  z-index: 1000;
 }
 
 .earth1:hover .earth-info1,
